# cms

./: Cargo.toml  README.md  go.mod
.github/workflows/: rust.yml
cmd/cms/: main.go
src/: main.rs  tmdb.rs
src/cms/: mod.rs  movies.rs  shows.rs
src/tmdb/: mod.rs  search.rs  tv_episodes.rs
