[package]
name = "cms"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
dirs = "4.0"
lazy_static = "1.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
tmdb-async = "0.6"
tokio = { version = "1.26", features = ["full", "macros", "rt-multi-thread"] }
walkdir = "2.3"
