[package]
name = "cms"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
dirs = "4.0"
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full", "macros", "rt-multi-thread"] }
walkdir = "2.3"
